apply min-width to header to avoid line wrap in swallow page

--- a/public/stylesheets/master.css
+++ b/public/stylesheets/master.css
@@ -193,6 +193,7 @@ p {
   overflow: hidden;
   position: relative;
   margin-bottom: 20px;
+  min-width: 900px;
 }
 #header .spotlight {
   margin-left: 210px;
